hphp/test/zend/bad/zend/foreach_list_003.php
<?php

$array = [['a', 'b'], 'c', 'd'];

foreach($array as list($key) => list(list(), $a)) {
}

?>